# cpp-generic-programming

./: .gitignore  Makefile  README.md
bib/: cppref.bib
code/ranges/kinds/: .clang-tidy  CMakeLists.txt  main.cpp
common/: license-cc.tex  metadata.tex
config/: config-lst.tex  packages.tex
guide/: ack.tex  content.tex  foreword.tex  guide.tex
m1/: Makefile.def  Makefile.mk  content.tex  slides.tex
m1/l1/: concept-combine.tex  content.tex  definition.tex  invocation.tex  multiple-params.tex  slides.tex  two-phase.tex  unconstrained.tex
m1/l1/code/square/: CMakeLists.txt  main01.cpp  main02.cpp  main03.cpp  main04.cpp  main05.cpp  main4.cpp
m1/l2/: .multiple-params.tex.swp  argded-value.tex  content.tex  multiple-intro.tex  multiple-params.tex  multiple-tpl-params.tex  return-auto.tex  return-common.tex  return-param.tex  return.tex  slides.tex
m1/l3/: Makefile.def  Makefile.mk  argded-ref.tex  argded-value.tex  auto.tex  content.tex  main.tex  return-ded.tex  slides.tex
m1/l3/code/auto/: CMakeLists.txt  main01.cpp  main02.cpp  main03.cpp
m1/l4/: Makefile.def  Makefile.mk  content.tex  intro.tex  main.tex  pointers.tex  return-type.tex  slides.tex  temp.tex
m1/l5/: Makefile.def  Makefile.mk  addressof.tex  content.tex  decltype-auto.tex  decltype.tex  declval.tex  ifconstexpr.tex  main.tex  slides.tex
m1/l6/: Makefile.def  Makefile.mk  array.tex  auto.tex  content.tex  intro.tex  main.tex  rules.tex  slides.tex
m11/: Makefile.def  Makefile.mk  content.tex  main.tex  slides.tex
m11/l1/: Makefile.def  Makefile.mk  content.tex  iterator.tex  main.tex  ranges.tex  slides.tex
m2/: Makefile.def  Makefile.mk  content.tex  main.tex  slides.tex
m2/l1/: Makefile.def  Makefile.mk  content.tex  definition.tex  main.tex  slides.tex  use.tex
m2/l1/code/fixedvec/: CMakeLists.txt  fixed_vector.hpp  main.cpp
m2/l2/: Makefile.def  Makefile.mk  content.tex  friend-fun.tex  friend-op.tex  main.tex  slides.tex
m2/l3/: Makefile.def  Makefile.mk  content.tex  intro.tex  main.tex  multi.tex  partial.tex  slides.tex
m2/l4/: Makefile.def  Makefile.mk  content.tex  intro.tex  main.tex  slides.tex
m2/l5/: Makefile.def  Makefile.mk  alias.tex  content.tex  main.tex  slides.tex  special.tex  std.tex
m2/l5/code/fixedvec/: CMakeLists.txt  fixed_vector.hpp  main01.cpp  main02.cpp
m2/l6/: Makefile.def  Makefile.mk  content.tex  deduction.tex  guides.tex  intro.tex  main.tex  reference.tex  slides.tex  std.tex
m2/l7/: Makefile.def  Makefile.mk  classes.tex  content.tex  main.tex  slides.tex
m3/: Makefile.def  Makefile.mk  content.tex  main.tex  slides.tex
m3/l1/: Makefile.def  Makefile.mk  content.tex  intro.tex  main.tex  nttp.tex  req.tex  slides.tex
m3/l2/: Makefile.def  Makefile.mk  bool.tex  content.tex  intro.tex  main.tex  req.tex  slides.tex
m3/l3/: Makefile.def  Makefile.mk  content.tex  indirect.tex  intro.tex  main.tex  slides.tex
m3/l4/: Makefile.def  Makefile.mk  basic.tex  compare.tex  content.tex  intro.tex  main.tex  random.tex  slides.tex  types.tex
m4/: Makefile.def  Makefile.mk  content.tex  main.tex  slides.tex
m4/l1/: Makefile.def  Makefile.mk  content.tex  intro.tex  main.tex  overload.tex  safe-print.tex  slides.tex  syntax.tex
m4/l2/: Makefile.def  Makefile.mk  content.tex  intro.tex  main.tex  record.tex  slides.tex  varusing.tex
m4/l2/code/record/: CMakeLists.txt  main.cpp  main01.cpp  main02.cpp  main03.cpp  record.hpp  record1.hpp  record2.hpp  record3.hpp
m4/l3/: Makefile.def  Makefile.mk  content.tex  expr.tex  folding.tex  index.tex  main.tex  slides.tex
m4/l4/: Makefile.def  Makefile.mk  bases.tex  content.tex  guides.tex  main.tex  slides.tex
m5/: Makefile.def  Makefile.mk  content.tex  main.tex  slides.tex
m5/l1/: Makefile.def  Makefile.mk  adl.tex  bases.tex  content.tex  intro.tex  main.tex  slides.tex  typename.tex
m5/l2/: Makefile.def  Makefile.mk  content.tex  copy.tex  main.tex  memfun.tex  slides.tex  tplkey.tex
m5/l3/: Makefile.def  Makefile.mk  content.tex  intro.tex  main.tex  slides.tex
m5/l4/: Makefile.def  Makefile.mk  class.tex  content.tex  intro.tex  main.tex  slides.tex
m5/l5/: Makefile.def  Makefile.mk  content.tex  forwarding.tex  intro.tex  main.tex  slides.tex
m5/l5/code/fwd/: CMakeLists.txt  main.cpp
m5/l6/: Makefile.def  Makefile.mk  content.tex  extern.tex  intro.tex  main.tex  slides.tex
m5/l6/code/fixedvec/: CMakeLists.txt  fixed_vector.cpp  fixed_vector.hpp  main.cpp  numbers.cpp  numbers.hpp
m6/: Makefile.def  Makefile.mk  content.tex  main.tex  slides.tex
m6/l1/: Makefile.def  Makefile.mk  constref.tex  content.tex  main.tex  ref.tex  slides.tex  value.tex
m6/l2/: Makefile.def  Makefile.mk  content.tex  main.tex  refwrap.tex  slides.tex  stdref.tex
m6/l3/: Makefile.def  Makefile.mk  content.tex  intro.tex  main.tex  slides.tex
m7/: Makefile.def  Makefile.mk  content.tex  main.tex  slides.tex
m7/l1/: Makefile.def  Makefile.mk  content.tex  intro.tex  main.tex  pred.tex  query.tex  rel.tex  slides.tex  transf.tex
m7/l2/: Makefile.def  Makefile.mk  conditional.tex  content.tex  impl.tex  intro.tex  main.tex  partspec.tex  slides.tex
m7/l2/code/cond/: CMakeLists.txt  main.cpp
m8/: Makefile.def  Makefile.mk  content.tex  main.tex  slides.tex
m8/l1/: Makefile.def  Makefile.mk  callables.tex  content.tex  funobj.tex  lambda.tex  main.tex  memptr.tex  slides.tex
m8/l2/: Makefile.def  Makefile.mk  content.tex  intro.tex  main.tex  slides.tex
m8/l3/: Makefile.def  Makefile.mk  content.tex  geninvoke.tex  invoke.tex  main.tex  slides.tex
m8/l4/: Makefile.def  Makefile.mk  concepts.tex  content.tex  main.tex  meta.tex  slides.tex
m9/: Makefile.def  Makefile.mk  content.tex  main.tex  slides.tex
m9/l1/: Makefile.def  Makefile.mk  cmp.tex  content.tex  init.tex  intro.tex  main.tex  param.tex  slides.tex  tuple-ifz.tex
m9/l2/: Makefile.def  gsl.tex  (+8 more)
ranges/: Makefile.def  Makefile.mk  content.tex  main.tex  slides.tex
(+201 files in other folders)
